nav logo site email app store buttons contact us content

--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,9 @@
 # Site settings
 title:
-email:
+email: "szliaw@gmail.com"
 description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "https://seanyyyyyy.github.io" # the base hostname & protocol for your site
-
-twitter_username:
-github_username:
 
 # Build settings
 markdown: kramdown
